[tool.poetry]
name = "olli"
version = "0.1.2"
description = "Olli searches your Loki logs and relays matching terms to Discord."
authors = ["Joe Banks <joseph@josephbanks.me>"]
license = "MIT"
readme = "README.md"

# Links
homepage = "https://python-discord.github.io/olli/"
repository = "https://github.com/python-discord/olli"
documentation = "https://python-discord.github.io/olli/"

keywords = ["loki", "discord", "logs", "observability"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators"
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.17.1,<0.24.0"
toml = "^0.10.2"
pydantic = "^1.8.1"
schedule = "^1.0.0"
python-dotenv = "^0.16.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"

[tool.poetry.scripts]
olli = "olli.__main__:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
